@@ -1,5 +1,9 @@
 2007-08-02  Vitaly Alexeev <tishka92@yahoo.com>
 	
+		* gameswf/gameswf_impl.cpp: a bit cleanup
+
+2007-08-02  Vitaly Alexeev <tishka92@yahoo.com>
+	
 		* gameswf/gameswf_as_classes/as_broadcaster.cpp:
 		has forgotten to clear the debug stuff
 
